--- a/product.html
+++ b/product.html
@@ -16,7 +16,7 @@
 <body>
   <nav class="sticked">
     <ul class="is-left">
-      <li><a class="logo" href="#">Лазаревское</a></li>
+      <li><a class="logo" href="index.html">Лазаревское</a></li>
     </ul>
     <ul class="is-right navmenu">
       <li><a href="#">О нас</a></li>
@@ -41,8 +41,8 @@
         <li><a href="#">Каталог продукция</a></li>
         <li><a href="#">Колбасы варёные</a></li>
         <li><span>Говядина "Боярская"</span></li>
-      </ul> 
-    </div>  
+      </ul>
+    </div>
     <div class="columns">
       <div class="column is-one-quarter">
         <div class="navbar">
@@ -64,7 +64,7 @@
         </div>
       </div>
       <div class="column is-three-quarter">
-        <img src="/img/products/delikat.jpg" />
+        <img src="./img/products/delikat.jpg" />
         <h3 class="center">Говядина "Боярская"</h3>
         <p class="center">копчено-вареная категории А продукты из свинины мясные цельнокусковые</p>
         <div class="columns">
@@ -105,19 +105,19 @@
   <div class="container">
     <h3>Продукция в этом разделе</h3>
     <div class="columns">
-      <div class="column is-one-quarter"><img src="/img/products/salo.jpg" />
+      <div class="column is-one-quarter"><img src="./img/products/salo.jpg" />
         <h4>Сало, шпик</h4>
         <a href="#" class="btn btn-default-secondary">В каталог</a>
       </div>
-      <div class="column is-one-quarter"><img src="/img/products/delikat.jpg" />
+      <div class="column is-one-quarter"><img src="./img/products/delikat.jpg" />
         <h4>Деликатесы</h4>
         <a href="#" class="btn btn-default-secondary">В каталог</a>
       </div>
-      <div class="column is-one-quarter"><img src="/img/products/vetchina.jpg" />
+      <div class="column is-one-quarter"><img src="./img/products/vetchina.jpg" />
         <h4>Ветчины</h4>
         <a href="#" class="btn btn-default-secondary">В каталог</a>
       </div>
-      <div class="column is-one-quarter"><img src="/img/products/sardel.jpg" />
+      <div class="column is-one-quarter"><img src="./img/products/sardel.jpg" />
         <h4>Сардельки</h4>
         <a href="#" class="btn btn-default-secondary">В каталог</a>
       </div>
