fixed link to map

--- a/product.html
+++ b/product.html
@@ -9,8 +9,8 @@
 			  src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
 			  integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
 			  crossorigin="anonymous"></script>
-  <script src="http://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
-  <script type="text/javascript" src="/js/map.js"></script>
+  <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+  <script type="text/javascript" src="js/map.js"></script>
   <title>ООО "ПХ "Лазаревское" - одно из крупнейших сельскохозяйственных предприятий Тульской области. Мясоперерабатывающий комбинат, животноводческий комплекс, племенная ферма, собственные сельхозплощади.</title>
 </head>
 <body>
