--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			  integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
 			  crossorigin="anonymous"></script>
   <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
-  <script type="text/javascript" src="/js/map.js"></script>
+  <script type="text/javascript" src="js/map.js"></script>
   <title>ООО "ПХ "Лазаревское" - одно из крупнейших сельскохозяйственных предприятий Тульской области. Мясоперерабатывающий комбинат, животноводческий комплекс, племенная ферма, собственные сельхозплощади.</title>
 </head>
 <body>
